# iron-coder-projects

./: README.md
a_Test_projec/: .ironcoder.toml
asset_testing/: .ironcoder.toml  Cargo.toml
asset_testing_2/: .ironcoder.toml  Cargo.toml
asset_testing_2/src/: system.rs
ate/: .ironcoder.toml  Cargo.toml
cargo_add_testing/: .ironcoder.toml  Cargo.toml
cargo_add_testing/src/: main.rs  system.rs
display_testing/: .ironcoder.toml  Cargo.toml
display_testing/src/: main.rs  system.rs
ili-test/: Cargo.toml
ili-test/src/: main.rs
ili9341-testing/: .ironcoder.toml  Cargo.toml
micromod_connection_testing/: .ironcoder.toml
my_cool_project/: .ironcoder.toml
my_cool_project/src/: sys_mod_output_testing.rs
new_test/: .ironcoder.toml
oled-testing/: .ironcoder.toml  Cargo.toml
oled-testing/src/: main.rs  sys_mod_output_testing.rs
project_save_as_testing/: .ironcoder.toml  Cargo.toml
project_save_as_testing/src/: sys_mod_output_testing.rs
spi-disaply-testing/: .ironcoder.toml  Cargo.toml
spi-disaply-testing/src/: main.rs  system.rs
spi_testing/: .ironcoder.toml
spi_testing/src/: main.rs  system.rs
template_test/: .ironcoder.toml  Cargo.toml
testing-work/: .ironcoder.toml  Cargo.toml
testing-work/src/: system.rs
testing_project/: .ironcoder.toml
testing_project/src/: system.rs
yo_testing/: .ironcoder.toml  Cargo.toml
yo_testing/src/: main.rs  sys_mod_output_testing.rs
yoyoy/: .ironcoder.toml  Cargo.toml
