[package]
name = "feather-rp2040-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
cortex-m-rt = "0.7"
iron-coder-feather-rp2040-bsp = { version = "0.1.0", path = "../../iron-coder-boards/Adafruit/Feather_RP2040/bsp" }
iron-coder-featherwing-oled-bsp = { version = "0.1.0", path = "../../iron-coder-boards/Adafruit/FeatherWing_OLED_128x64/bsp" }
embedded-graphics = "0.7.1"
sh1106 = "0.4.0"

